# bad-news

./: .lohr  Cargo.toml  README.md  README.org  flake.nix
src/: autojoin.rs  bot.rs  config.rs  main.rs
