[package]
name = "bad-news"
version = "0.1.0"
authors = ["Antoine Martin <antoine97.martin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
futures = "0.3"
regex = "1"
tokio = { version = "1", features = [ "full" ] }
tracing-subscriber = "0.2"
url = { version = "2.2", features = [ "serde" ] }
serde_regex = "1"
serde_yaml = "0.8"
serde = "1.0"
systemd = "0.8"
thiserror = "1.0"
void = "1"

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "b5de20349945afcde13a78f023b906f421bb9764"
